# shairplay-stanmore-2-volume-sync-rust

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix
.github/workflows/: build.yml  release.yml
src/: main.rs
