[package]
name = "shairplay-stanmore-2-volume-sync"
version = "0.1.0"
edition = "2021"
description = "Forward shairport-sync AirPlay volume to a Marshall Stanmore II over MQTT"
readme = "README.md"

[[bin]]
name = "volume-sync"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
rumqttc = "0.24"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
